# smlq

./: .env  .gitignore  Dockerfile  README.md  deployment.yaml  file.db  file.db.wal  justfile  pyproject.toml  test.http
examples/: get.py  getcomplete.py  load.py  poem.txt
examples/factorization/: getcomplete.py  load.py
smlq/: config.py  main.py
